correct MD mark